<resources>
    <string name="app_name" translatable="false">InteRRim</string>
    <string name="text_btn_return">Return</string>
    <string name="text_missing_item">Elément manquant</string>

    <string name="text_annonyme">Unknown\nUser</string>
    <string name="text_interimaire">Worker (connexion)</string>
    <string name="text_employeur">Employer (connexion)</string>
    <string name="text_credit">Creatted by \nRichard Picole-Ollivier &amp; Romain Gallerne</string>
    <string name="text_login">Login</string>
    <string name="text_search">Search</string>
    <string name="text_btn_application">See my applications</string>
    <string name="text_signin">Signin</string>
    <string name="text_signin_hint">You already have an account ?\n Loggin in</string>
    <string name="text_login_hint">You don\'t have an account ?\nSign in</string>
    <string name="text_password">Password</string>
    <string name="text_company_name">Company name</string>
    <string name="text_email_adress">Email address</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_country">Country</string>
    <string name="text_city">City</string>
    <string name="text_website">Website</string>
    <string name="text_linkedin">LinkedIn</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_error_signin_employer">Please at least indicate email and password</string>
    <string name="text_error_signin_candidate">Please at least indicate a element</string>
    <string name="text_error_login_employer_mail">Please indicate an email</string>
    <string name="text_error_create_offer">Please fill all the fields</string>
    <string name="text_error_login_employer_password">Please indicate a password</string>
    <string name="text_error_no_phone">No phone number precised</string>
    <string name="text_error">Error</string>
    <string name="text_error_signin_password">Please have at least a 6 chars long password</string>
    <string name="text_error_mail_already_used">This email address is already used by an account</string>
    <string name="text_error_already_apply">You have already applied to this application</string>
    <string name="text_disconnected">You have been disconneted from your last session</string>
    <string name="text_delete_successs">The offer has been deleted</string>
    <string name="text_cv_upload_successs">The CV has been uploaded</string>
    <string name="text_answer_success">The offer has been anwsered</string>
    <string name="text_error_not_connected">Please connect</string>
    <string name="text_apply_successs">Successfully applied to the application</string>
    <string name="text_see_profile">Click here to see his profile</string>
    <string name="text_account_creation_successs">Account Created</string>
    <string name="text_post_cv">You can post a cv or quit the page by clicking the main image</string>
    <string name="text_name">Name</string>
    <string name="text_firstname">Firstname</string>
    <string name="text_birth_date">Birth date</string>
    <string name="text_description">Description</string>
    <string name="text_cv">Upload CV</string>
    <string name="text_see_offers">See all offers</string>
    <string name="text_create_offer">New offer</string>
    <string name="text_recherche_post">Search offer</string>
    <string name="list_offer">Offers list</string>
    <string name="create_offer">Create an offer</string>
    <string name="text_application">My applications</string>
    <string name="text_my_offers">My offers</string>
    <string name="text_title">Title</string>
    <string name="text_salary">Salary</string>
    <string name="text_delete_offer">Delete this offer</string>

    <string-array name="type_interim">
        <item>Type of interim</item>
        <item>Temporaty work</item>
        <item>Long-term work</item>
        <item>Temp-to-perm</item>
        <item>Specialized work</item>
        <item>Remplacement</item>
        <item>Seasonal</item>
    </string-array>
    <string-array name="zones">
        <item>Zone</item>
        <item>Montpellier</item>
        <item>Marseille</item>
        <item>Sète</item>
        <item>Béziers</item>
        <item>Pézenas</item>
        <item>Perpignan</item>
        <item>Mèze</item>
        <item>Montagnac</item>
        <item>Lattes</item>
    </string-array>
    <string-array name="periodes">
        <item>Time periode</item>
        <item>Spring 2024</item>
        <item>Summer 2024</item>
        <item>Fall 2024</item>
        <item>Winter 2024</item>
        <item>Spring 2025</item>
        <item>Summer 2025</item>
        <item>Fall 2025</item>
        <item>Winter 2025</item>
    </string-array>
    <string name="text_error_not_same_password">The passwords sent are not the same</string>
    <string name="text_download_cv">Download CV</string>
    <string name="postuler">Apply</string>
    <string name="text_deny">Reject</string>
    <string name="text_approve">Accept</string>

    <string-array name="status">
        <item>Offer status</item>
        <item>Approved</item>
        <item>Pending</item>
        <item>Rejected</item>
    </string-array>
    <string name="text_offer_created">Offer created</string>

</resources>