<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/menu_activity"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/background_one"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/default_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16sp"
        android:scrollbarSize="10sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/logocomplet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditTextPrenom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/text_firstname"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/EditTextNom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/text_name"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="30sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/EditTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_email_adress"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_phone_number"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextDateNaissance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_birth_date"
                android:inputType="date"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditTextCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/text_country"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/EditTextCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/text_city"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="30sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/EditTextWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_website"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_description"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:lines="8"
                android:maxLines="10"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/button_CV"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:clickable="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/upload"/>

                    <TextView
                        android:id="@+id/textViewCV"
                        android:layout_marginTop="18dp"
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/sf_bold"
                        android:text="@string/text_cv"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <Button
                        android:id="@+id/button_send"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_button"
                        android:fontFamily="@font/sf"
                        android:foreground="@drawable/normal_button_border"
                        android:lineHeight="40dp"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="10dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/text_signin"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/sf_bold"
                android:text="@string/text_signin_hint"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>