<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/createOffer_activity"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/background_one"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/default_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16sp"
        android:scrollbarSize="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="75dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />

                <!-- Vue invisible pour occuper l'espace restant -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="end|top"
                    android:background="@drawable/background_button"
                    android:fontFamily="@font/sf"
                    android:foreground="@drawable/normal_button_border"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:layout_weight="0"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/text_btn_return"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/sf_bold"
                android:layout_marginBottom="10dp"
                android:text="@string/create_offer"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_title"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/SpinnerOfferType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_edittext"
                android:dropDownVerticalOffset="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/SpinnerZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_edittext"
                android:dropDownVerticalOffset="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/SpinnerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_edittext"
                android:dropDownVerticalOffset="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_salary"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/EditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/text_description"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:lines="8"
                android:maxLines="10"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_public_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/sf"
                android:foreground="@drawable/normal_button_border"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/text_create_offer"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>